tests/baselines/reference/parserConstructorDeclaration2.errors.txt
parserConstructorDeclaration2.ts(2,3): error TS1089: 'static' modifier cannot appear on a constructor declaration.


==== parserConstructorDeclaration2.ts (1 errors) ====
    class C {
      static constructor() { }
      ~~~~~~
!!! error TS1089: 'static' modifier cannot appear on a constructor declaration.
    }